# chemtab-models

./: Dockerfile  LICENSE  README.md  make_metadata.py  template_metadata.yaml
.github/workflows/: PullRequestWorkflow.yml
Initial_Condition_Configs/: README.md
Initial_Conditions/: sampleDiffusionFlame.yaml
PCDNNV2_decomp-CTV2/: metadata.yaml  testTargets.yaml  weights.csv
PCDNNV2_decomp-CTV2/experiment_records/: CPV_source_config.yaml  Inverse_config.yaml  Souener_config.yaml
PCDNNV2_decomp-CTV2/regressor/: fingerprint.pb  keras_metadata.pb  saved_model.pb
PCDNNV2_decomp-CTV2/regressor/variables/: variables.index
PCDNNV2_decomp-Methane-AIR-Orthog+Zmix/: experiment_record.yaml  metadata.yaml  testTargets.yaml  weights.csv  weights_inv.csv
PCDNNV2_decomp-Methane-AIR-Orthog+Zmix/regressor/: keras_metadata.pb  saved_model.pb
PCDNNV2_decomp-Methane-AIR-Orthog+Zmix/regressor/variables/: variables.index
PCDNNV2_decomp-PMMA-Air-2D-Orthog+Zmix/: metadata.yaml  optuna_study.pickle  testTargets.yaml  weights.csv  weights_inv.csv
PCDNNV2_decomp-Wax-Orthog+Zmix/: metadata.yaml
tests/: CMakeLists.txt  modelPath.hpp.in  tests.cpp
